add pair strategy

--- a/strategies/PairsTrading.ipynb
+++ b/strategies/PairsTrading.ipynb
@@ -16,27 +16,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "'seaborn' is not a valid package style, path of style file, URL of style file, or library style name (library styles are listed in `style.available`)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/matplotlib/style/core.py:137\u001B[0m, in \u001B[0;36muse\u001B[0;34m(style)\u001B[0m\n\u001B[1;32m    136\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 137\u001B[0m     style \u001B[38;5;241m=\u001B[39m \u001B[43m_rc_params_in_file\u001B[49m\u001B[43m(\u001B[49m\u001B[43mstyle\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    138\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mOSError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/matplotlib/__init__.py:866\u001B[0m, in \u001B[0;36m_rc_params_in_file\u001B[0;34m(fname, transform, fail_on_error)\u001B[0m\n\u001B[1;32m    865\u001B[0m rc_temp \u001B[38;5;241m=\u001B[39m {}\n\u001B[0;32m--> 866\u001B[0m \u001B[43m\u001B[49m\u001B[38;5;28;43;01mwith\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43m_open_file_or_url\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfname\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mas\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mfd\u001B[49m\u001B[43m:\u001B[49m\n\u001B[1;32m    867\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43;01mtry\u001B[39;49;00m\u001B[43m:\u001B[49m\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/contextlib.py:137\u001B[0m, in \u001B[0;36m_GeneratorContextManager.__enter__\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    136\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 137\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mnext\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgen)\n\u001B[1;32m    138\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mStopIteration\u001B[39;00m:\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/matplotlib/__init__.py:843\u001B[0m, in \u001B[0;36m_open_file_or_url\u001B[0;34m(fname)\u001B[0m\n\u001B[1;32m    842\u001B[0m fname \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mexpanduser(fname)\n\u001B[0;32m--> 843\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(fname, encoding\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mutf-8\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[1;32m    844\u001B[0m     \u001B[38;5;28;01myield\u001B[39;00m f\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'seaborn'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001B[0;31mOSError\u001B[0m                                   Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 12\u001B[0m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# Fancy graphics\u001B[39;00m\n\u001B[0;32m---> 12\u001B[0m \u001B[43mplt\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstyle\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43muse\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mseaborn\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;66;03m# Getting Yahoo finance data\u001B[39;00m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mgetdata\u001B[39m(tickers,start,end,frequency):\n",
-      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/matplotlib/style/core.py:139\u001B[0m, in \u001B[0;36muse\u001B[0;34m(style)\u001B[0m\n\u001B[1;32m    137\u001B[0m         style \u001B[38;5;241m=\u001B[39m _rc_params_in_file(style)\n\u001B[1;32m    138\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mOSError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n\u001B[0;32m--> 139\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mOSError\u001B[39;00m(\n\u001B[1;32m    140\u001B[0m             \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstyle\u001B[38;5;132;01m!r}\u001B[39;00m\u001B[38;5;124m is not a valid package style, path of style \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    141\u001B[0m             \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfile, URL of style file, or library style name (library \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    142\u001B[0m             \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mstyles are listed in `style.available`)\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01merr\u001B[39;00m\n\u001B[1;32m    143\u001B[0m filtered \u001B[38;5;241m=\u001B[39m {}\n\u001B[1;32m    144\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m style:  \u001B[38;5;66;03m# don't trigger RcParams.__getitem__('backend')\u001B[39;00m\n",
-      "\u001B[0;31mOSError\u001B[0m: 'seaborn' is not a valid package style, path of style file, URL of style file, or library style name (library styles are listed in `style.available`)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For yahoo finance\n",
     "import io\n",
@@ -44,12 +24,12 @@
     "import requests\n",
     "\n",
     "# The usual suspects\n",
-    "import numpy             as np\n",
-    "import pandas            as pd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Fancy graphics\n",
-    "plt.style.use('seaborn')\n",
+    "# plt.style.use('seaborn')\n",
     "\n",
     "# Getting Yahoo finance data\n",
     "def getdata(tickers,start,end,frequency):\n",
@@ -88,22 +68,211 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-12-25T16:38:22.213231Z",
-     "start_time": "2023-12-25T16:38:20.816281Z"
+     "start_time": "2023-12-25T16:39:43.109758Z"
     }
    },
    "id": "61f311ff936577d2",
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "#tc = -0.0005 # Transaction costs\n",
+    "\n",
+    "pairs = pd.DataFrame({'TPEP':PEP['Close'].shift(1)/PEP['Close'].shift(2)-1,\n",
+    "                      'TKO':KO['Close'].shift(1)/KO['Close'].shift(2)-1})\n",
+    "\n",
+    "# Criteria to select which asset we're going to buy, in this case, the one that had the lowest return yesterday\n",
+    "pairs['Target'] = pairs.min(axis=1)\n",
+    "\n",
+    "# Signal that triggers the purchase of the asset\n",
+    "pairs['Correlation'] = ((PEP['Close'].shift(1)/PEP['Close'].shift(20)-1).rolling(window=9)\n",
+    "                        .corr((KO['Close'].shift(1)/KO['Close'].shift(20)-1)))\n",
+    "\n",
+    "Signal = pairs['Correlation'] < 0.9\n",
+    "\n",
+    "# We're holding positions that weren't profitable yesterday\n",
+    "HoldingYesterdayPosition = ((pairs['Target'].shift(1).isin(pairs['TPEP']) &\n",
+    "                             (PEP['Close'].shift(1)/PEP['Open'].shift(1)-1 < 0)) |\n",
+    "                            (pairs['Target'].shift(1).isin(pairs['TKO']) &\n",
+    "                             (KO['Close'].shift(1)/KO['Open'].shift(1)-1 < 0))) # if tc, add here\n",
+    "\n",
+    "# Since we aren't using leverage, we can't enter on a new position if\n",
+    "# we entered on a position yesterday (and if it wasn't profitable)\n",
+    "NoMoney = Signal.shift(1) & HoldingYesterdayPosition\n",
+    "\n",
+    "pairs['PEP'] = np.where(NoMoney,\n",
+    "                        np.nan,\n",
+    "                        np.where(PEP['Close']/PEP['Open']-1 < 0,\n",
+    "                                 PEP['Close'].shift(-1)/PEP['Open']-1,\n",
+    "                                 PEP['Close']/PEP['Open']-1))\n",
+    "\n",
+    "pairs['KO'] = np.where(NoMoney,\n",
+    "                       np.nan,\n",
+    "                       np.where(KO['Close']/KO['Open']-1 < 0,\n",
+    "                                KO['Close'].shift(-1)/KO['Open']-1,\n",
+    "                                KO['Close']/KO['Open']-1))\n",
+    "\n",
+    "pairs['Returns'] = np.where(Signal,\n",
+    "                            np.where(pairs['Target'].isin(pairs['TPEP']),\n",
+    "                                      pairs['PEP'],\n",
+    "                                      pairs['KO']),\n",
+    "                             np.nan) # if tc, add here\n",
+    "\n",
+    "pairs['CumulativeReturn'] = pairs['Returns'].dropna().cumsum()\n"
+   ],
    "metadata": {
     "collapsed": false
    },
    "id": "177fea0793f3ac29"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Pepsi returns\n",
+    "ReturnPEP = PEP['Close']/PEP['Open']-1\n",
+    "BuyHoldPEP = PEP['Adj Close']/float(PEP['Adj Close'][:1])-1\n",
+    "\n",
+    "# Coca Cola returns\n",
+    "ReturnKO = KO['Close']/KO['Open']-1\n",
+    "BuyHoldKO = KO['Adj Close']/float(KO['Adj Close'][:1])-1\n",
+    "\n",
+    "# Benchmark\n",
+    "ReturnBoth = (ReturnPEP+ReturnKO)/2\n",
+    "BuyHoldBoth = ((BuyHoldPEP+BuyHoldKO)/2).fillna(method='ffill')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "44555ac13acc7f03"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "returns = pairs['Returns'].dropna()\n",
+    "cumulret = pairs['CumulativeReturn'].dropna()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(16,6))\n",
+    "\n",
+    "hist1, bins1 = np.histogram(ReturnBoth.dropna(), bins=50)\n",
+    "width = 0.7 * (bins1[1] - bins1[0])\n",
+    "center = (bins1[:-1] + bins1[1:]) / 2\n",
+    "\n",
+    "ax.bar(center, hist1, align='center', width=width, label='50/50 Returns')\n",
+    "\n",
+    "hist2, bins2 = np.histogram(returns, bins=50)\n",
+    "ax.bar(center, hist2, align='center', width=width, label='Pairs Trading')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "print('=====Strategy Returns=====')\n",
+    "print('Mean return =',round((returns.mean())*100,2),\"%\")\n",
+    "print('Standard deviaton =',round((returns.std())*100,2),\"%\")\n",
+    "print(\"==========================\")\n",
+    "print('Worst return =',round((min(returns))*100,2),\"%\")\n",
+    "print('Best return =',round((max(returns))*100,2),\"%\")\n",
+    "print(\"=========================\")\n",
+    "print('Lower quantile =',round((returns.quantile(q=0.25))*100,2),\"%\")\n",
+    "print('Median return =',round((returns.quantile(q=0.5))*100,2),\"%\")\n",
+    "print('Upper quantile =',round((returns.quantile(q=0.75))*100,2),\"%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "841a4817befd4658"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Some stats, this could be improved by trying to estimate a yearly sharpe, among many others\n",
+    "executionrate = len(returns)/len(ReturnBoth)\n",
+    "\n",
+    "maxdd = round(max(np.maximum.accumulate(cumulret)-cumulret)*100,2)\n",
+    "\n",
+    "mask = returns<0\n",
+    "diffs = np.diff(mask.astype(int))\n",
+    "start_mask = np.append(True,diffs==1) \n",
+    "mask1 = mask & ~(start_mask & np.append(diffs==-1,True))\n",
+    "id = (start_mask & mask1).cumsum()\n",
+    "out = np.bincount(id[mask1]-1,returns[mask1])\n",
+    "badd = round(max(-out)*100,2)\n",
+    "\n",
+    "spositive = returns[returns > 0]\n",
+    "snegative = -returns[returns < 0]\n",
+    "winrate = round((len(spositive)/(len(spositive)+len(snegative)))*100,2)\n",
+    "\n",
+    "beta = round(returns.corr(ReturnBoth),2)\n",
+    "\n",
+    "sharpe = round((float(cumulret[-1:]))/cumulret.std(),2)\n",
+    "\n",
+    "tret = round((float(cumulret[-1:]))*100,2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c1747f6c4d3794ca"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16,6))\n",
+    "plt.plot(BuyHoldBoth*100, label='Buy & Hold 50/50')\n",
+    "plt.plot(cumulret*100, label='Pairs Trading', color='coral')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Returns (in %)')\n",
+    "plt.margins(x=0.005,y=0.02)\n",
+    "plt.axhline(y=0, xmin=0, xmax=1, linestyle='--', color='k')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Cumulative Return = \",tret,\"%\")\n",
+    "print(\"=========================\")\n",
+    "print(\"Execution Rate = \",round(executionrate*100,2),\"%\")\n",
+    "print(\"Win Rate = \",winrate,\"%\")\n",
+    "print(\"=========================\")\n",
+    "print(\"Maximum Loss = \",maxdd,\"%\")\n",
+    "print(\"Maximum Consecutive Loss = \",badd,\"%\")\n",
+    "print(\"=========================\")\n",
+    "print(\"Beta = \",beta)\n",
+    "print(\"Sharpe = \",sharpe)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fe544acf35697e0"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "BuyHoldBothYTD = (((PEP['Adj Close'][-252:]/float(PEP['Adj Close'][-252])-1)+(KO['Adj Close'][-252:]/float(KO['Adj Close'][-252])-1))/2).fillna(method='ffill')\n",
+    "StrategyYTD = returns[-92:].cumsum()\n",
+    "\n",
+    "plt.figure(figsize=(16,6))\n",
+    "plt.plot(BuyHoldBothYTD*100, label='Buy & Hold 50/50')\n",
+    "plt.plot(StrategyYTD*100, label='Pairs Trading', color='coral')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Returns (in %)')\n",
+    "plt.margins(x=0.005,y=0.02)\n",
+    "plt.axhline(y=0, xmin=0, xmax=1, linestyle='--', color='k')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "print('Buy & Hold 50/50 YTD Performance (at 1 July 2020) =',round(float(BuyHoldBothYTD[-1:]*100),1),'%')\n",
+    "print('Strategy YTD Performance =',round(float(StrategyYTD[-1:]*100),1),'%')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5aa006fef3234a30"
   }
  ],
  "metadata": {
