add third notebook

--- a/AI_strat/Step_3_Optimizing_Model_Parameters.ipynb
+++ b/AI_strat/Step_3_Optimizing_Model_Parameters.ipynb
@@ -250,6 +250,31 @@
    }
   },
   {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            2 Spread SPY  2 Rolling Avg Spread SPY  2 Gap SPY  \\\nDate                                                            \n2004-01-06     -0.499997                  0.830002   0.000000   \n2004-01-07      0.258062                  0.950001  -1.347835   \n2004-01-08     -0.123282                  0.905003  -2.142861   \n2004-01-09      0.051287                  0.935005   2.437393   \n2004-01-12      0.390609                  1.060001  -0.499988   \n\n            2 Rolling Avg Gap SPY  2 Intraday SPY  2 Rolling Avg Intraday SPY  \\\nDate                                                                            \n2004-01-06               0.090000       -1.764713                   -0.570000   \n2004-01-07              -0.220001       -0.279999                   -0.465000   \n2004-01-08               0.079998       -0.666673                   -0.334999   \n2004-01-09              -0.114998       -1.814818                    0.155003   \n2004-01-12              -0.194996        4.153941                   -0.114998   \n\n            2 Spread AGG  2 Rolling Avg Spread AGG  2 Gap AGG  \\\nDate                                                            \n2004-01-06     -0.488097                  0.410000   0.000000   \n2004-01-07     -0.230780                  0.364998  -2.666582   \n2004-01-08     -0.116286                  0.339996  -1.720001   \n2004-01-09      0.199995                  0.369995  14.801465   \n2004-01-12     -0.078945                  0.354996  -1.000000   \n\n            2 Rolling Avg Gap AGG  2 Intraday AGG  2 Rolling Avg Intraday AGG  \nDate                                                                           \n2004-01-06               0.110001       -1.362066                   -0.180000  \n2004-01-07               0.149998        0.199990                   -0.195000  \n2004-01-08              -0.065002       -0.285704                   -0.165001  \n2004-01-09               0.305000       -0.666681                   -0.105000  \n2004-01-12               0.395000       -2.933269                    0.114998  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>2 Spread SPY</th>\n      <th>2 Rolling Avg Spread SPY</th>\n      <th>2 Gap SPY</th>\n      <th>2 Rolling Avg Gap SPY</th>\n      <th>2 Intraday SPY</th>\n      <th>2 Rolling Avg Intraday SPY</th>\n      <th>2 Spread AGG</th>\n      <th>2 Rolling Avg Spread AGG</th>\n      <th>2 Gap AGG</th>\n      <th>2 Rolling Avg Gap AGG</th>\n      <th>2 Intraday AGG</th>\n      <th>2 Rolling Avg Intraday AGG</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2004-01-06</th>\n      <td>-0.499997</td>\n      <td>0.830002</td>\n      <td>0.000000</td>\n      <td>0.090000</td>\n      <td>-1.764713</td>\n      <td>-0.570000</td>\n      <td>-0.488097</td>\n      <td>0.410000</td>\n      <td>0.000000</td>\n      <td>0.110001</td>\n      <td>-1.362066</td>\n      <td>-0.180000</td>\n    </tr>\n    <tr>\n      <th>2004-01-07</th>\n      <td>0.258062</td>\n      <td>0.950001</td>\n      <td>-1.347835</td>\n      <td>-0.220001</td>\n      <td>-0.279999</td>\n      <td>-0.465000</td>\n      <td>-0.230780</td>\n      <td>0.364998</td>\n      <td>-2.666582</td>\n      <td>0.149998</td>\n      <td>0.199990</td>\n      <td>-0.195000</td>\n    </tr>\n    <tr>\n      <th>2004-01-08</th>\n      <td>-0.123282</td>\n      <td>0.905003</td>\n      <td>-2.142861</td>\n      <td>0.079998</td>\n      <td>-0.666673</td>\n      <td>-0.334999</td>\n      <td>-0.116286</td>\n      <td>0.339996</td>\n      <td>-1.720001</td>\n      <td>-0.065002</td>\n      <td>-0.285704</td>\n      <td>-0.165001</td>\n    </tr>\n    <tr>\n      <th>2004-01-09</th>\n      <td>0.051287</td>\n      <td>0.935005</td>\n      <td>2.437393</td>\n      <td>-0.114998</td>\n      <td>-1.814818</td>\n      <td>0.155003</td>\n      <td>0.199995</td>\n      <td>0.369995</td>\n      <td>14.801465</td>\n      <td>0.305000</td>\n      <td>-0.666681</td>\n      <td>-0.105000</td>\n    </tr>\n    <tr>\n      <th>2004-01-12</th>\n      <td>0.390609</td>\n      <td>1.060001</td>\n      <td>-0.499988</td>\n      <td>-0.194996</td>\n      <td>4.153941</td>\n      <td>-0.114998</td>\n      <td>-0.078945</td>\n      <td>0.354996</td>\n      <td>-1.000000</td>\n      <td>0.395000</td>\n      <td>-2.933269</td>\n      <td>0.114998</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-10T06:31:34.000806Z",
+     "start_time": "2024-01-10T06:31:33.972107Z"
+    }
+   },
+   "execution_count": 12
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "7. Split train and test data and run Random Search on train data"
