add third notebook

--- a/AI_strat/Step_3_Optimizing_Model_Parameters.ipynb
+++ b/AI_strat/Step_3_Optimizing_Model_Parameters.ipynb
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -1354,8 +1354,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-10T06:26:50.272947Z",
-     "start_time": "2024-01-10T06:26:50.267931Z"
+     "end_time": "2024-01-10T06:34:56.321186Z",
+     "start_time": "2024-01-10T06:34:56.306689Z"
     }
    }
   },
@@ -1370,24 +1370,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2.5568940077327126e-05"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# !pip3 install backtesting\n",
-    "from backtesting import Strategy, Backtest\n",
-    "from sklearn.model_selection import train_test_split"
+    "from backtesting import Strategy, Backtest"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-10T06:27:40.091139Z",
-     "start_time": "2024-01-10T06:27:40.086692Z"
+     "end_time": "2024-01-10T06:35:42.929190Z",
+     "start_time": "2024-01-10T06:35:42.918941Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stderr",
@@ -1402,33 +1410,33 @@
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed\n",
-      "Start                     2021-01-07 00:00:00\n",
+      "Start                     2021-01-11 00:00:00\n",
       "End                       2024-01-05 00:00:00\n",
-      "Duration                   1093 days 00:00:00\n",
-      "Exposure Time [%]                   99.734748\n",
-      "Equity Final [$]                  1291.300354\n",
-      "Equity Peak [$]                   1302.480408\n",
-      "Return [%]                          29.130035\n",
-      "Buy & Hold Return [%]               23.429176\n",
-      "Return (Ann.) [%]                    8.919906\n",
-      "Volatility (Ann.) [%]               14.688787\n",
-      "Sharpe Ratio                          0.60726\n",
-      "Sortino Ratio                        0.969732\n",
-      "Calmar Ratio                         0.530243\n",
-      "Max. Drawdown [%]                  -16.822305\n",
-      "Avg. Drawdown [%]                   -2.643977\n",
-      "Max. Drawdown Duration      341 days 00:00:00\n",
-      "Avg. Drawdown Duration       40 days 00:00:00\n",
-      "# Trades                                  752\n",
-      "Win Rate [%]                        53.058511\n",
+      "Duration                   1089 days 00:00:00\n",
+      "Exposure Time [%]                   99.734043\n",
+      "Equity Final [$]                   821.240662\n",
+      "Equity Peak [$]                   1130.900574\n",
+      "Return [%]                         -17.875934\n",
+      "Buy & Hold Return [%]               23.562811\n",
+      "Return (Ann.) [%]                   -6.386496\n",
+      "Volatility (Ann.) [%]               13.312282\n",
+      "Sharpe Ratio                              0.0\n",
+      "Sortino Ratio                             0.0\n",
+      "Calmar Ratio                              0.0\n",
+      "Max. Drawdown [%]                  -32.790683\n",
+      "Avg. Drawdown [%]                   -3.337251\n",
+      "Max. Drawdown Duration      794 days 00:00:00\n",
+      "Avg. Drawdown Duration       63 days 00:00:00\n",
+      "# Trades                                  750\n",
+      "Win Rate [%]                        52.533333\n",
       "Best Trade [%]                       5.538214\n",
       "Worst Trade [%]                     -5.001621\n",
-      "Avg. Trade [%]                       0.044878\n",
+      "Avg. Trade [%]                      -0.017287\n",
       "Max. Trade Duration           4 days 00:00:00\n",
       "Avg. Trade Duration           2 days 00:00:00\n",
-      "Profit Factor                        1.134059\n",
-      "Expectancy [%]                       0.050911\n",
-      "SQN                                  1.158551\n",
+      "Profit Factor                        0.972744\n",
+      "Expectancy [%]                      -0.011221\n",
+      "SQN                                 -0.765774\n",
       "_strategy                          MyStrategy\n",
       "_equity_curve                             ...\n",
       "_trades                        Size  Entry...\n",
@@ -1439,7 +1447,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_21705/538209530.py:26: SettingWithCopyWarning: \n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_21705/2446526726.py:26: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1452,9 +1460,9 @@
     "step = 2\n",
     "lookback = 2\n",
     "\n",
-    "estimator1 = Ridge(alpha=0.002840026017965097)\n",
-    "estimator2 = Lasso(alpha=0.002999525583333498)\n",
-    "estimator3 = KNeighborsRegressor(n_neighbors=8)\n",
+    "estimator1 = Ridge(alpha=search.best_params_['Ridge__alpha'])\n",
+    "estimator2 = Lasso(alpha=search.best_params_['Lasso__alpha'])\n",
+    "estimator3 = KNeighborsRegressor(n_neighbors=search.best_params_['KNN__n_neighbors'])\n",
     "models = [estimator1,\n",
     "          estimator2,\n",
     "          estimator3,\n",
@@ -1500,8 +1508,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-10T06:27:42.003556Z",
-     "start_time": "2024-01-10T06:27:41.672585Z"
+     "end_time": "2024-01-10T06:35:52.212769Z",
+     "start_time": "2024-01-10T06:35:51.826871Z"
     }
    }
   },
