add early stopping

--- a/AI_strat/stock-market-analysis-prediction-using-lstm.ipynb
+++ b/AI_strat/stock-market-analysis-prediction-using-lstm.ipynb
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "33e725d9",
    "metadata": {
     "execution": {
@@ -1650,9 +1650,9 @@
      "status": "completed"
     },
     "tags": [],
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-02-07T06:29:18.464460Z",
-     "start_time": "2024-02-07T06:28:05.517103Z"
+     "start_time": "2024-02-07T06:41:12.929154Z"
     }
    },
    "outputs": [
@@ -1660,21 +1660,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2831/2831 [==============================] - 60s 21ms/step - loss: 0.0010\n"
+      "Epoch 1/10\n",
+      "283/283 [==============================] - 7s 22ms/step - loss: 5.4873e-04 - val_loss: 0.0012\n",
+      "Epoch 2/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 2.3942e-04 - val_loss: 0.0016\n",
+      "Epoch 3/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 1.5552e-04 - val_loss: 6.3257e-04\n",
+      "Epoch 4/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 1.5793e-04 - val_loss: 0.0013\n",
+      "Epoch 5/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 1.5658e-04 - val_loss: 4.1508e-04\n",
+      "Epoch 6/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 1.2590e-04 - val_loss: 4.2757e-04\n",
+      "Epoch 7/10\n",
+      "283/283 [==============================] - 6s 22ms/step - loss: 1.0494e-04 - val_loss: 3.6962e-04\n",
+      "Epoch 8/10\n",
+      " 54/283 [====>.........................] - ETA: 4s - loss: 1.2271e-04"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "<keras.src.callbacks.History at 0x2a1ad8810>"
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, LSTM\n",
+    "from keras.callbacks import EarlyStopping\n",
     "\n",
     "# Build the LSTM model\n",
     "model = Sequential()\n",
@@ -1683,11 +1691,15 @@
     "model.add(Dense(25))\n",
     "model.add(Dense(1))\n",
     "\n",
+    "# Set early stopping\n",
+    "\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=2, verbose=1)\n",
+    "\n",
     "# Compile the model\n",
     "model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "\n",
     "# Train the model\n",
-    "model.fit(x_train, y_train, batch_size=1, epochs=1)"
+    "model.fit(x_train, y_train, batch_size=8, epochs=10, validation_split=0.2, callbacks=[early_stop])"
    ]
   },
   {
