add yahoo finance

--- a/AI_strat/ny-stock-price-prediction-rnn-lstm-gru.ipynb
+++ b/AI_strat/ny-stock-price-prediction-rnn-lstm-gru.ipynb
@@ -73,30 +73,9 @@
    "cell_type": "markdown",
    "source": [
     "# 2. Analyze data <a class=\"anchor\" id=\"2-bullet\"></a> \n",
-    "- load stock prices from prices-split-adjusted.csv\n",
+    "- load stock prices from yahoo finance\n",
     "- analyze data"
    ]
-  },
-  {
-   "metadata": {
-    "_uuid": "aef1074dd4f86a9fe5a380c83994123ce56cce9d",
-    "_cell_guid": "60dbc696-dda8-476e-8227-010a79df3aa2",
-    "trusted": false,
-    "collapsed": true
-   },
-   "cell_type": "code",
-   "source": [
-    "# import all stock prices \n",
-    "df = pd.read_csv(\"../input/prices-split-adjusted.csv\", index_col = 0)\n",
-    "df.info()\n",
-    "df.head()\n",
-    "\n",
-    "# number of different stocks\n",
-    "print('\\nnumber of different stocks: ', len(list(set(df.symbol))))\n",
-    "print(list(set(df.symbol))[:10])"
-   ],
-   "execution_count": null,
-   "outputs": []
   },
   {
    "cell_type": "code",
@@ -285,10 +264,10 @@
     "# function for min-max normalization of stock\n",
     "def normalize_data(df):\n",
     "    min_max_scaler = sklearn.preprocessing.MinMaxScaler()\n",
-    "    df['open'] = min_max_scaler.fit_transform(df.open.values.reshape(-1,1))\n",
-    "    df['high'] = min_max_scaler.fit_transform(df.high.values.reshape(-1,1))\n",
-    "    df['low'] = min_max_scaler.fit_transform(df.low.values.reshape(-1,1))\n",
-    "    df['close'] = min_max_scaler.fit_transform(df['close'].values.reshape(-1,1))\n",
+    "    df['open'] = min_max_scaler.fit_transform(df.Open.values.reshape(-1,1))\n",
+    "    df['high'] = min_max_scaler.fit_transform(df.High.values.reshape(-1,1))\n",
+    "    df['low'] = min_max_scaler.fit_transform(df.Low.values.reshape(-1,1))\n",
+    "    df['close'] = min_max_scaler.fit_transform(df['Adj Close'].values.reshape(-1,1))\n",
     "    return df\n",
     "\n",
     "# function to create train, validation, test data given stock data and sequence length\n",
