--- a/strategies/MTM-flow.ipynb
+++ b/strategies/MTM-flow.ipynb
@@ -109,6 +109,31 @@
    "outputs": [
     {
      "data": {
+      "text/plain": "Date\n2003-12-31 05:00:00+00:00     True\n2004-01-02 05:00:00+00:00     True\n2004-01-05 05:00:00+00:00    False\n2004-01-06 05:00:00+00:00    False\n2004-01-07 05:00:00+00:00    False\n                             ...  \n2024-02-07 05:00:00+00:00    False\n2024-02-08 05:00:00+00:00    False\n2024-02-09 05:00:00+00:00    False\n2024-02-12 05:00:00+00:00    False\n2024-02-13 05:00:00+00:00    False\nName: Close, Length: 5064, dtype: bool"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "short_entries"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-14T05:32:21.633848Z",
+     "start_time": "2024-02-14T05:32:21.627636Z"
+    }
+   },
+   "id": "c2e923d001248ff3",
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
       "text/plain": "Start                         2003-12-31 05:00:00+00:00\nEnd                           2024-02-13 05:00:00+00:00\nPeriod                               5064 days 00:00:00\nStart Value                                       100.0\nEnd Value                                    620.623016\nTotal Return [%]                             520.623016\nBenchmark Return [%]                          105.98706\nMax Gross Exposure [%]                            100.0\nTotal Fees Paid                                     0.0\nMax Drawdown [%]                              21.079168\nMax Drawdown Duration                 370 days 00:00:00\nTotal Trades                                        483\nTotal Closed Trades                                 483\nTotal Open Trades                                     0\nOpen Trade PnL                                      0.0\nWin Rate [%]                                  59.213251\nBest Trade [%]                                 6.465247\nWorst Trade [%]                              -11.270644\nAvg Winning Trade [%]                          1.652246\nAvg Losing Trade [%]                          -1.437387\nAvg Winning Trade Duration    5 days 12:05:02.097902097\nAvg Losing Trade Duration     5 days 11:56:18.461538461\nProfit Factor                                   1.67544\nExpectancy                                     1.061527\nSharpe Ratio                                   1.123334\nCalmar Ratio                                   0.667154\nOmega Ratio                                    1.240043\nSortino Ratio                                   1.67849\nName: Close, dtype: object"
      },
      "execution_count": 5,
